# stopmonitor

./: .gitignore  Dockerfile  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-latest.yml  build-release-tag.yml  docker-build-push-latest.yml  docker-build-push-tag.yml
config/: default.yaml
landing/: landing.html
landing/css/: autocomp.css  landing.css
landing/js/: autocomp.js
static/css/: default.css
static/js/: stopmonitor.js  tripmonitor.js
stopmonitor/: __main__.py  server.py  version.py
stopmonitor/adapter/: base.py  text.py
stopmonitor/adapter/vdv431/: api.py  isotime.py  request.py  response.py
templates/: default.html
templates/default/: default.html
templates/default/css/: default.css
templates/vpe/: vpe.html
templates/vpe/css/: vpe.css
tripmonitor/: isotime.py  model.py  request.py  response.py  server.py
